<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quote_preview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_quote_label" />

    <TextView
        android:id="@+id/current_quote_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/current_quote_default" />


    <TextView
        android:id="@+id/quote_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Quote" />

    <TextView
        android:id="@+id/quote_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/movie_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/movie" />

    <TextView
        android:id="@+id/movie_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding ="50dp"
        android:orientation="horizontal"
        >


    </RelativeLayout>

</LinearLayout>