<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.rosehulman.MovieQuote.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_quotes"
        android:name="edu.rosehulman.MovieQuote.ui.QuoteEditFragment"
        android:label="@string/title_quotes"
        tools:layout="@layout/fragment_quote_edit" />
//new
    <fragment
        android:id="@+id/navigation_quotes_detail"
        android:name="edu.rosehulman.MovieQuote.ui.QuoteDetailFragment"
        android:label="@string/title_quotes"
        tools:layout="@layout/fragment_quote_detail" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.rosehulman.MovieQuote.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>