<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".ui.home.UserFragment">

   <TextView
       android:id="@+id/yourProfile"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:textSize="18sp"
       android:text="@string/your_profile"
       android:layout_marginTop="150sp"
       />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/yourProfile"
        android:textSize="30sp"
        android:text="@string/bilbo_baggins"
        android:layout_marginTop="20sp"
        />

    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_below="@id/profileName"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_face_foreground" />
    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/iconImage"
        android:textSize="18sp"
        android:text="@string/_111_years_old"
        android:layout_marginTop="20sp"
        />
    <TextView
        android:id="@+id/major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/age"
        android:textSize="18sp"
        android:text="@string/bilbo_baggins"
        android:layout_marginTop="20sp"
        />

 <Button
     android:id="@+id/logout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentBottom="true"
     android:layout_marginStart="5dp"
     android:layout_marginLeft="20dp"
     android:layout_marginTop="5dp"
     android:layout_marginEnd="5dp"
     android:layout_marginBottom="5dp"
     android:text="LOGOUT" />

 <Button
     android:id="@+id/edit"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
     android:layout_alignParentBottom="true"
     android:layout_marginStart="5dp"
     android:layout_marginTop="5dp"
     android:layout_marginEnd="5dp"
     android:layout_marginRight="20dp"
     android:layout_marginBottom="5dp"
     android:text="EDIT" />


</RelativeLayout>